<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <ListPreference
        android:key="@string/pref_scale_key"
        android:title="@string/temp_display_title"
        android:entries="@array/metrics"
        android:entryValues="@array/metricsAlias"
        android:defaultValue="@string/pref_scale_default"
        />

</PreferenceScreen>
